--- a/front-end/src/components/utilidades_principal/MiniForm.module.css
+++ b/front-end/src/components/utilidades_principal/MiniForm.module.css
@@ -20,6 +20,7 @@
         background: #3F3F3F;
         font-size: 14px;
         font-weight: 600;
+        color: #fff;
     }
     
     & button { 
