--- a/front-end/src/components/utilidades_global/Button.module.css
+++ b/front-end/src/components/utilidades_global/Button.module.css
@@ -8,4 +8,8 @@
     font-size: 20px;
     font-weight: 700;
     margin: 0 auto;
+    cursor: pointer;
+}
+.danger { 
+    background-color: red;
 }
