--- a/front-end/src/components/utilidades_principal/CaixaProdutos.module.css
+++ b/front-end/src/components/utilidades_principal/CaixaProdutos.module.css
@@ -45,6 +45,9 @@
                 font-weight: 800;
             }
         }
+        button {
+            margin-top: 10px;
+        }
     }
     & p {
         font-size: 16px;
