--- a/front-end/src/components/utilidades_principal/CaixaProdutos.module.css
+++ b/front-end/src/components/utilidades_principal/CaixaProdutos.module.css
@@ -16,6 +16,7 @@
         padding: 25px 0px;
         flex-direction: column;
         justify-content: center;
+        justify-items: center;
         align-items: center;
         background-color: #3f3f3f4a;
         border: 2px solid #3f3f3f4a;
