--- a/front-end/src/components/utilidades_global/Button.module.css
+++ b/front-end/src/components/utilidades_global/Button.module.css
@@ -1,12 +1,14 @@
 .button {
     width: 160px;
     height: 60px;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    border: none;
+    filter: none; /* Remova o drop-shadow */
+    box-shadow: 0 4px 6px #0000001a, 0 2px 4px #0000000f;
     background-color: #1F51FF;
     color: #2A2E35;
-    border-radius: 30px;
+    border-radius: 25px;
     font-size: 20px;
-    font-weight: 700;
+    font-weight: bold;
     margin: 0 auto;
     cursor: pointer;
 }
