--- a/front-end/src/components/utilidades_principal/CaixaProdutos.module.css
+++ b/front-end/src/components/utilidades_principal/CaixaProdutos.module.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     margin: 25px 45px;
-    gap: 30px;
+    gap: 15px;
     border-radius: 50px;
     padding: 50px 0px;
     box-shadow: 3px 3px 8px #00000093;
@@ -13,15 +13,15 @@
     & .box_produtos {
         display: flex;
         width: 300px;
-        padding: 25px 0px;
+        padding: 20px 15px;
         flex-direction: column;
         justify-content: center;
         justify-items: center;
         align-items: center;
-        background-color: #3f3f3f4a;
-        border: 2px solid #3f3f3f4a;
-        box-shadow: 3px 3px 8px #00000093;
-        border-radius: 10px;
+        background-color: #F5F7FA;
+        border: 1px solid #D1D5DB;
+        box-shadow:  0 4px 8px #0000001a, 0 2px 4px #0000000f;;
+        border-radius: 16px;
     
         & .box_img {
             width: 250px;
@@ -33,21 +33,23 @@
         }
 
         & p {
-            color: #0000009f;
+            color: #4A4A4A;
             font-size: 15px;
             font-weight: 600;
             width: 200px;
             height: 100%;
             margin: 5px auto;
-            border-bottom: 2px solid #f5f5f5;
+            border-bottom: 2px solid #4A4A4A;
             & span {
-                color: #000000d0;
+                color: #FF6F61;
                 font-size: 18px;
                 font-weight: 800;
             }
         }
         button {
             margin-top: 10px;
+            width: 180px;
+            height: 80px;
         }
     }
     & p {
