--- a/front-end/src/components/utilidades_global/Button.module.css
+++ b/front-end/src/components/utilidades_global/Button.module.css
@@ -5,7 +5,7 @@
     filter: none; /* Remova o drop-shadow */
     box-shadow: 0 4px 6px #0000001a, 0 2px 4px #0000000f;
     background-color: #1F51FF;
-    color: #2A2E35;
+    color: #F5F5F5;
     border-radius: 25px;
     font-size: 20px;
     font-weight: bold;
