--- a/front-end/src/components/utilidades_principal/CaixaProdutos.module.css
+++ b/front-end/src/components/utilidades_principal/CaixaProdutos.module.css
@@ -51,6 +51,27 @@
             width: 180px;
             height: 80px;
         }
+        
+        & a {
+            display: flex;
+            color: #1F51FF;
+            margin-left: auto;
+            margin-right: 50px;
+            text-decoration: none;
+            font-size: 15px;
+            font-weight: 600;
+            gap: 5px;
+
+            &:hover {
+                text-decoration: underline;
+            }
+            
+            & svg {
+                color: black;
+                width: 20px;
+                height: 20px;
+            }
+        }
     }
     & p {
         font-size: 16px;
