--- a/front-end/src/components/utilidades_principal/CaixaProdutos.module.css
+++ b/front-end/src/components/utilidades_principal/CaixaProdutos.module.css
@@ -51,7 +51,7 @@
             width: 180px;
             height: 80px;
         }
-        
+        /* link */
         & a {
             display: flex;
             color: #1F51FF;
