--- a/front-end/src/components/utilidades_global/Button.module.css
+++ b/front-end/src/components/utilidades_global/Button.module.css
@@ -9,7 +9,7 @@
     border-radius: 25px;
     font-size: 20px;
     font-weight: bold;
-    margin: 0 auto;
+    margin: 0 auto !important;
     cursor: pointer;
 }
 .danger { 
