--- a/front-end/src/components/utilidades_principal/CaixaProdutos.module.css
+++ b/front-end/src/components/utilidades_principal/CaixaProdutos.module.css
@@ -51,12 +51,12 @@
             width: 180px;
             height: 80px;
         }
-        /* link */
+
         & a {
             display: flex;
             color: #1F51FF;
-            margin-left: auto !important;
-            margin-right: 50px !important;
+            margin-left: auto;
+            margin-right: 50px;
             text-decoration: none;
             font-size: 15px;
             font-weight: 600;
