--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -2,5 +2,5 @@ body {
   margin: 0;
   padding: 0;
   background-color: #f5f5f5;
-  font-family: "Poppins";
+  font-family: "Poppins", "Fira Code";
 }
