--- a/front-end/src/components/utilidades_principal/CaixaProdutos.module.css
+++ b/front-end/src/components/utilidades_principal/CaixaProdutos.module.css
@@ -47,9 +47,10 @@
             }
         }
         button {
-            margin-top: 10px;
             width: 180px;
             height: 80px;
+            display: block; 
+            margin: 10px auto; 
         }
 
         & a {
