--- a/front-end/src/components/utilidades_principal/CaixaProdutos.module.css
+++ b/front-end/src/components/utilidades_principal/CaixaProdutos.module.css
@@ -73,6 +73,9 @@
                 &:hover {
                     text-decoration: underline;
                 }
+                &:visited { 
+                    color: #FF6F61;
+                }
             }
         }
     }
