--- a/front-end/src/components/utilidades_principal/CaixaProdutos.module.css
+++ b/front-end/src/components/utilidades_principal/CaixaProdutos.module.css
@@ -55,6 +55,7 @@
 
         & .link {
             display: flex;
+            width: 120px;
             gap: 5px;
             margin-left: auto;
             margin-right: 50px;
