--- a/front-end/src/components/utilidades_principal/HeaderPrincipal.module.css
+++ b/front-end/src/components/utilidades_principal/HeaderPrincipal.module.css
@@ -11,19 +11,56 @@
     & img { 
         cursor: pointer;
     }
+
+    & .navbar {
+        margin-right: -1rem;
+        display: flex;
+        gap: 10px;
+        margin-top: 46px;
+        & .icone_lupa svg {
+            width: 55px;
+            height: 55px;
+            cursor: pointer;
+        }
+        & .input_navbar {
+            margin-top: 10px;
+            width: 225px;
+            display: flex;
+            gap: 10px;
+            /* display: none; */
+            & input { 
+                width: 100%;
+                padding: 10px;
+                border-radius: 5px;
+                background-color: #F5F5F5;
+                font-size: 16px;
+                font-weight: 500;
+            }  
+            & .icone_enviar { 
+                & svg {
+                width: 45px;
+                height: 45px;
+                color: #FFF;
+                cursor: pointer;
+                }
+            }
+        }
+    }
+    
     & .btns_menu {
+        
         & ul { 
-            margin-top: 46px;
+            margin-top: 54px;
             & li {
                 display: inline-block;
-                padding: 10px;
+                margin: 0 10px;
+                cursor: pointer;
+                padding: 10px 15px;
                 background-color: #1F51FF;
                 color: #F5F5F5;
                 font-weight: 600;
                 border-radius: 10px;
-                margin: 0 10px;  
-                box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-                cursor: pointer;
+                box-shadow: 0px 4px 4px 0px #00000040;  
             } 
         } 
     }
