--- a/front-end/src/components/utilidades_principal/CaixaProdutos.module.css
+++ b/front-end/src/components/utilidades_principal/CaixaProdutos.module.css
@@ -24,10 +24,9 @@
         border-radius: 16px;
     
         & .box_img {
-            width: 250px;
-            height: 100%;
             & img{
-                width: 100%;
+                width: 250px;
+                height: 250px;
                 border-radius: 10px;
             }
         }
