--- a/front-end/src/components/utilidades_global/Message.module.css
+++ b/front-end/src/components/utilidades_global/Message.module.css
@@ -1,14 +1,21 @@
-.msg {
-    text-align: center;
-    font-size: 20px;
-    font-weight: 700;
-    padding: 15px 0px;
-    margin: 10px 0px;
-    box-shadow: 5px 3px 5px #41414157;
-}
-.sucess {
-    background-color: #00FF9D;
-}
-.danger {
-    background-color: red;
+.container {
+    width: 100%;
+    position: fixed; /* Garante que fique fixo na tela */
+    top: 50%; /* Posiciona verticalmente no meio da tela */
+    left: 50%; /* Posiciona horizontalmente no meio da tela */
+    transform: translate(-50%, -50%);
+
+    & .msg {
+        text-align: center;
+        font-size: 20px;
+        font-weight: 700;
+        padding: 15px 0px;
+        box-shadow: 5px 3px 5px #41414157;
+    }
+    & .sucess {
+        background-color: #00ff9d;
+    }
+    & .danger {
+        background-color: #ff0000;
+    }
 }
