--- a/front-end/src/components/utilidades_principal/HeaderPrincipal.module.css
+++ b/front-end/src/components/utilidades_principal/HeaderPrincipal.module.css
@@ -4,11 +4,12 @@
     background-color: #2A2E35;
     display: flex;
     justify-content: space-around;
+    align-items: center;
     padding: 20px 0px;
     /* O bootstrap usa border-box, que causa conflito com este header então usei o content-box, para evitar o conflito */
-    box-sizing: content-box; 
+    box-sizing: content-box;
 
-    & img { 
+    & img {
         cursor: pointer;
     }
 
@@ -17,40 +18,44 @@
         display: flex;
         gap: 10px;
         margin-top: 46px;
+
         & .icone_lupa svg {
             width: 55px;
             height: 55px;
             cursor: pointer;
         }
+
         & .input_navbar {
             margin-top: 10px;
             width: 225px;
             display: flex;
             gap: 10px;
+
             /* display: none; */
-            & input { 
+            & input {
                 width: 100%;
                 padding: 10px;
                 border-radius: 5px;
                 background-color: #F5F5F5;
                 font-size: 16px;
                 font-weight: 500;
-            }  
-            & .icone_enviar { 
+            }
+
+            & .icone_enviar {
                 & svg {
-                width: 45px;
-                height: 45px;
-                color: #FFF;
-                cursor: pointer;
+                    width: 45px;
+                    height: 45px;
+                    color: #FFF;
+                    cursor: pointer;
                 }
             }
         }
     }
-    
+
     & .btns_menu {
-        
-        & ul { 
+        & ul {
             margin-top: 54px;
+
             & li {
                 display: inline-block;
                 margin: 0 10px;
@@ -60,17 +65,18 @@
                 color: #F5F5F5;
                 font-weight: 600;
                 border-radius: 10px;
-                box-shadow: 0px 4px 4px 0px #00000040;  
-            } 
-        } 
+                box-shadow: 0px 4px 4px 0px #00000040;
+            }
+        }
     }
-    & .abrir_menu { 
+
+    & .abrir_menu {
         margin-top: 46px;
         cursor: pointer;
     }
 
     & .menu {
-        width: 700px;
+        width: 800px;
         height: 100%;
         background-color: #2A2E35;
         position: absolute;
@@ -82,7 +88,7 @@
             display: flex;
             justify-content: space-between;
             margin: 23px;
-            
+
             & h1 {
                 padding: 15px;
                 background-color: #1F51FF;
@@ -92,13 +98,89 @@
                 border-radius: 20px;
             }
         }
-        & .btns_users { 
+
+        & .btns_users {
             text-align: right;
             margin-right: 14px;
         }
     }
 }
+
 /* Ativando menu com a classe JS */
-.menu.Menu_JS{
+.menu.Menu_JS {
     display: block;
+}
+/* Responsividade */
+@media (max-width: 740px) AND (min-width:648px){
+    .header {
+        height: 100%;
+        flex-wrap: wrap;
+        padding: 10px 0px;
+        justify-content: space-evenly;
+        & img {
+            width: 100px;
+            margin-top: 10px;
+        }
+
+        & .navbar {
+            margin-left: 90px;
+            & .icone_lupa svg {
+                width: 60px;
+            }
+    
+            & .input_navbar {
+                width: 200px;
+                height: 42px;
+            }
+        }
+        & .btns_menu ul {
+            margin-top: 30px;
+        }
+
+        & .abrir_menu {
+            margin-top: 0px;
+            & img {
+                width: 60px;
+            }
+        }
+    }  
+}
+
+@media (max-width: 648px) {
+    .header {
+        flex-wrap: wrap;
+        height: 100%;
+        justify-content: space-evenly;
+        padding: 10px 0;
+
+        & img {
+            width: 90px;
+            margin-top: 10px;
+        }
+
+        & .navbar {
+            & .icone_lupa svg {
+                width: 50px;
+            }
+
+            & .input_navbar {
+                width: 200px;
+                height: 42px;
+            }
+        }
+
+        & .btns_menu ul {
+            margin-top: 20px;
+        }
+
+        & .abrir_menu {
+            margin-top: 0;
+            & img {
+                width: 60px;
+            }
+        }
+        & .menu {
+            
+        }
+    }
 }
