--- a/front-end/src/components/utilidades_principal/CaixaProdutos.module.css
+++ b/front-end/src/components/utilidades_principal/CaixaProdutos.module.css
@@ -12,7 +12,7 @@
 
     & .box_produtos {
         display: flex;
-        width: 300px;
+        width: 200px;
         padding: 20px 15px;
         flex-direction: column;
         justify-content: center;
@@ -20,13 +20,14 @@
         align-items: center;
         background-color: #F5F7FA;
         border: 1px solid #D1D5DB;
-        box-shadow:  0 4px 8px #0000001a, 0 2px 4px #0000000f;;
+        box-shadow: 0 4px 8px #0000001a, 0 2px 4px #0000000f;
+        ;
         border-radius: 16px;
-    
+
         & .box_img {
-            & img{
-                width: 250px;
-                height: 250px;
+            & img {
+                width: 150px;
+                height: 150px;
                 border-radius: 10px;
             }
         }
@@ -39,17 +40,19 @@
             height: 100%;
             margin: 5px auto;
             border-bottom: 2px solid #4A4A4A;
+
             & span {
                 color: #FF6F61;
                 font-size: 18px;
                 font-weight: 800;
             }
         }
+
         button {
             width: 180px;
             height: 80px;
-            display: block; 
-            margin: 10px auto; 
+            display: block;
+            margin: 10px auto;
         }
 
         & .link {
@@ -70,17 +73,27 @@
                 text-decoration: none;
                 font-size: 15px;
                 font-weight: 600;
+
                 &:hover {
                     text-decoration: underline;
                 }
-                &:visited { 
+
+                &:visited {
                     color: #FF6F61;
                 }
             }
         }
     }
+
     & p {
         font-size: 16px;
         font-weight: 700;
+    }
+}
+
+.boxError {
+    & img {
+        width: 200px;
+        height: 200px;
     }
 }
